Entrega de ejercicio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id = "Data">Base de Datos</button>
     </div>
     <div id = "alerta" class = "alert">
-        <p id = "Muchas gracias por su voto"></p>
+        <p id = "gracias">Muchas gracias por el Voto</p>
         <button id ="cerrar">Cerrar</button>
     </div>
     <script  src="script.js"></script>
